# Ossia

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CONTEXT.md  Caddyfile  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  langgraph.json  nginx.conf  ossia-deepagents-prompt.md  ossia.json  package-lock.json  package.json  pyproject.toml
.claude/skills/ponytail/: SKILL.md
.claude/skills/ponytail-audit/: SKILL.md
.claude/skills/ponytail-debt/: SKILL.md
.claude/skills/ponytail-gain/: SKILL.md
.claude/skills/ponytail-help/: SKILL.md
.claude/skills/ponytail-review/: SKILL.md
.firecrawl/: production-guide.md  standalone-deploy.md
.github/: dependabot.yml
.github/workflows/: release.yml  tui-test.yml
.kilo/: kilo.json
.langgraph_api/: .langgraph_ops.pckl
docs/: diagrams.md
docs/adr/: 0001-provider-agnostic-via-chatopenai-baseurl.md  0002-postgres-checkpointer-for-hitl-and-store.md  0003-mcp-graceful-degradation-via-worker-per-task.md  0004-unified-http-api-v1.md  0005-spec-driven-openapi-as-contract.md  0006-streaming-v3-protocol.md  0007-agent-scoped-memory-and-episodic-recall.md  0008-subagent-design-and-routing.md  0009-tool-surface-and-tavily.md  0010-runtime-context-ossia-context.md  0011-quickjs-code-interpreter.md  0012-thread-event-buffer-replay.md  0013-production-readiness-middleware-stack.md  0014-standalone-deployment.md  0015-durable-horizontal-scaling.md  0016-deepagents-adoption.md  0017-coordinator-tool-modularization.md
docs/agents/: CONTEXT.md  orchestration-audit.md
docs/demo/: README.md
docs/skills/code-review/: SKILL.md
docs/skills/web-search/: SKILL.md
monitoring/: loki-config.yml  prometheus.yml
monitoring/grafana/: dashboard-provider.yml  dashboard.json  datasources.yml
nebius/: deploy.sh
nebius/docker/: Dockerfile
nebius/endpoints/: candidate.yaml  embedder.yaml
nebius/jobs/: eval.yaml
notebooks/: demo.ipynb
openwiki/: .last-update.json  architecture.md  clients.md  data-and-ops.md  quickstart.md  workflows.md
plugins/ponytail/: README.md  __init__.py
scripts/: audit_ossia.py  coverage_matrix.py  eval_ossia.py  generate_changelog_entry.py  install.sh  install_browser.py  smoke_browser_use.py  smoke_price_compare.py  smoke_walmart_basket.py  update_openapi_spec.py
specs/: SPEC.md  changelog.md  coverage.md  openapi.checked.json
specs/features/: PRD-spec-driven-feature-development.md  TEMPLATE.md  async-subagents.md  code-interpreter.md  deterministic-session-id.md  durability-backend-seam.md  durable-event-buffer.md  durable-thread-metadata.md  durable-webhooks.md  horizontal-scaling.md  plugin-system.md  scratch-working-memory.md  thread-event-buffer.md  web-reviewer.md
src/core/: __init__.py  __main__.py  agent.py  api.py  audit.py  browser_use_tool.py  cache.py  cli.py  cli_helper.py  config.py  context.py  embeddings.py  episodic.py  eval.py  kb_loader.py  llm.py  logging_config.py  mcp_tools.py  mem0_tools.py  memory.py  metrics.py  middleware.py  middleware_adapters.py  plugin.py  plugin_config.py  redis_client.py  request_context.py  schemas.py  tools.py  v3_projector.py  webhooks.py
src/core/events/: __init__.py  buffer.py  normalizer.py  reducers.py  serializers.py  types.py
src/core/graphs/: __init__.py  _shared.py  auditor.py  researcher.py  supervisor.py  tester.py
src/core/orchestrators/: __init__.py  audit_pipeline.py  bugfix_pipeline.py  refactor_pipeline.py  schemas.py  tools.py
src/core/prompts/: system.md
src/core/utils/: __init__.py  session.py
src/ossia/: agent.py  api.py  audit.py  cli_helper.py  config.py  eval.py  mcp_tools.py  memory.py  middleware.py  schemas.py  tools.py
src/ossia/adapters/: __init__.py  nebius.py
src/ossia/prompts/: system.md
src/tui/: .oxlintrc.json  README.md  global.d.ts  package.json
src/tui/badges/: coverage.json
src/tui/scripts/: check-coverage.sh
src/tui/src/: App.tsx  index.tsx  session.ts  types.ts
src/tui/src/components/: BackgroundTasksPanel.tsx  InputBar.tsx  InterruptModal.tsx  ReActPanel.tsx  StatusBar.tsx  SubagentPanel.tsx  TimelinePanel.tsx  ToolPanel.tsx  primitives.tsx  statusBar.helpers.ts
src/tui/src/events/: reducer.test.ts  reducer.ts  stream.ts  types.ts
src/tui/tests/: components.test.tsx  integration.test.ts  reducer.test.ts  stream.test.ts
src/webui/: .env.example  README.md  index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src/webui/scripts/: copilotkit-dev-infra.mjs
src/webui/src/: App.tsx  constants.ts  index.css  reducer.ts  stream-v3.ts  stream.ts  types.ts
src/webui/src/app/api/copilotkit/[[...slug]]/: route.ts
src/webui/src/components/: ChatPanel.tsx  InterruptPrompt.tsx  MarkdownText.tsx  MyRuntimeProvider.tsx  ReActPanel.tsx  SessionSidebar.tsx  ShikiHighlighter.tsx  SubagentPanel.tsx  ToolFallback.tsx  ToolGroup.tsx  ToolPanel.tsx  TooltipIconButton.tsx
src/webui/src/runtimes/: ossia-external-store.ts  v3-accumulator.ts
src/webui/src/stores/: sideChannel.ts
src/webui/src/threadList/: ossiaAdapter.ts
src/webui/src/tools/: code.tsx  common.tsx  ossia-toolkit.tsx  pr-tools.tsx  response.tsx  search.tsx
src/webui/tests/: panel-persistence.spec.ts  syntax-highlighting.spec.ts  tool-ui.spec.ts
tests/: conftest.py  golden_dataset.json  test_api.py  test_browser_use_tool.py  test_cache.py  test_cli.py  test_context.py  test_embeddings.py  test_episodic.py  test_events.py  test_feature_specs.py  test_graph.py  test_graph_id_consistency.py  test_kb.py  test_mcp_tools.py  test_mem0_tools.py  test_memory.py  test_metrics.py  test_middleware.py  test_multitenant.py  test_openapi_drift.py  test_plugin.py  test_plugin_config.py  test_ponytail.py  test_rate_limit.py  test_redis_backends.py  test_semantic_recall.py  test_session.py  test_stub_tools.py  test_subagent_descriptions.py  test_tool_cache_middleware.py  test_tool_descriptions.py  test_tools.py  test_webhooks.py
