[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossia"
version = "0.9.0-rc1"
description = "Production-ready support agent for the Nebius Serverless Challenge"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Ossia Team" },
]
keywords = ["agent", "langchain", "langgraph", "deepagents", "nebius", "support"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Agent harness and runtime
    "deepagents[quickjs]>=0.6.11",
    "langchain>=1.3.9,<2.0.0",
    "langgraph>=0.3.0",
    "langchain-core>=1.4.7,<2.0.0",
    # Code interpreter middleware (QuickJS)
    "langchain-quickjs>=0.1.0",
    # Nvidia NIM via native ChatNVIDIA (free hosted + local containers)
    "langchain-nvidia-ai-endpoints>=1.0.0",
    # Community middlewares: eager dispatch, PII vault, context compaction, advisor routing
    "eager-tools-langgraph>=0.3.0",
    "langchain-nopii-middleware>=0.1.0",
    "compact-middleware>=0.1.1",
    "advisor-middleware>=0.1.1",
    # Model providers (portable, no hardcoded vendor)
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-nebius>=0.1.0",
    "langchain-openrouter>=0.2.0",
    # Persistence
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.2.0",
    # MCP client for LangChain docs server
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    # Web search and URL extraction (primary path)
    "tavily-python>=0.7.0",
    # Web search fallback when Tavily is unavailable
    "ddgs>=9.0.0",
    # Password/key hashing for caller-id derivation
    "argon2-cffi>=23.1.0",
    # Optional: Redis cache + lock. When REDIS_URL is unset, all
    # Redis-backed features degrade gracefully (no-op) and the
    # agent runs exactly as before. Adds a process-level connection
    # pool; not required for any HTTP route.
    "redis>=5.0.0,<6.0.0",
    # Optional: langgraph-redis. When REDIS_URL is set, replaces the
    # Postgres checkpointer + store with the Redis implementations.
    # Requires Redis 8+ (or Redis Stack) — the library uses
    # RedisJSON + RediSearch modules for index creation.
    "langgraph-checkpoint-redis>=0.5.0",
    # HTTP server / utilities
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",# Prometheus metrics
    "prometheus-fastapi-instrumentator>=8.0.0",
    # Rate limiting
    "slowapi>=0.1.10",
]

[project.scripts]
# Single entry point: `ossia` (start backend + TUI). After `pip install
# ossia` or `uv tool install ossia`, the binary is on PATH.
ossia = "core.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "pyright>=1.1.400",
    "ruff>=0.9.0",
]
notebook = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

ollama = [
    "langchain-ollama>=0.3.0",
]

# Optional: browser-use (https://browser-use.com) — the web-reviewer subagent
# imports this lazily. Install only when you want the web-reviewer to
# actually drive a browser. Without it, the tool returns a clear
# "browser-use not installed" error so the rest of the agent keeps working.
browseruse = [
    "browser-use>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # slowapi uses asyncio.iscoroutinefunction (deprecated in Python 3.14+)
    "ignore::DeprecationWarning:slowapi",
    # LangChain beta APIs we use intentionally
    "ignore::langchain_core._api.LangChainBetaWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["bs4", "tavily", "langchain_ollama", "eager_tools_langgraph", "compact_middleware", "advisor_middleware", "langchain_nopii_middleware", "numpy", "browser_use"]
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingImports = false
